# _fork-pmpc

./: CMakeLists.txt  README.md  package.xml  perceptive_mpc_https.rosinstall  perceptive_mpc_ssh.rosinstall
armstone/: AsKinematicSimulation.cpp  AsMPCController.cpp  AsPMPC.cpp  AsPMPC_Help.cpp  AsPMPC_Monitoring.cpp  AsPMPC_RosApi.cpp  AsPerceptiveMpcInterface.cpp  archive_AsKinematicSimulation.cpp  as_kinematic_simulation_node.cpp  as_mpc_controller_node.cpp  as_pmpc_node.cpp
config/: as_task copy_calibrated ish.info  as_task.info  demo.rviz  mabi_task.info  task.info  voxblox.yaml
config/archive/: as_task.info
example/: AsMPC.cpp  AsPerceptiveMpcInterface.cpp  KinematicSimulation.cpp  as_mpc_node.cpp  bug.txt
include/armstone/: AsKinematicSimulation.h  AsMPCController.h  AsPMPC.h  AsPerceptiveMpcInterface.h  archive_AsKinematicSimulation.h
include/example/: AsMPC.h  AsPerceptiveMpcInterface.h  KinematicSimulation.h
include/perceptive_mpc/: Definitions.h
include/perceptive_mpc/costs/: BaseElipseCost.h  InterpolateBaseArmTrajectory.h  InterpolatePoseTrajectory.h  QuadraticBaseEETrackingCost.h  QuadraticBaseTrackingCost.h  QuadraticEndeffectorTrackingCost.h
include/perceptive_mpc/kinematics/asArm/: asArmKinematics.hpp
launch/: as_demo.launch  as_mpc.launch  as_mpc_demo.launch  as_pmpc.launch  as_sim_demo.launch
launch/archive/: as_collision_avoidance_demo.launch  mabi_demo.launch
src/: SystemDynamics.cpp
src/costs/: BaseAvoidanceCost.cpp  BaseElipseCost.cpp  QuadraticBaseEETrackingCost.cpp  QuadraticBaseTrackingCost.cpp
src/kinematics/asArm/: asArmKinematics.cpp
src/kinematics/as_arm/: asArmKinematics.cpp
urdf/armstone/: as.urdf
